chore: add "--enable-preview" to test plugins in pom.xml